kubernetes-folder/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-backend
  labels:
    app: event-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-backend
  template:
    metadata:
      labels:
        app: event-backend
    spec:
      containers:
      - name: event-backend
        image: your-dockerhub-username/event-backend:latest
        ports:
        - containerPort: 5000
