kubernetes-folder/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-backend-service
spec:
  selector:
    app: event-backend
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
