kubernetes-folder/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-frontend-service
spec:
  selector:
    app: event-frontend
  ports:
  - port: 3000
    targetPort: 3000
  type: LoadBalancer
