kubernetes-folder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: event-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: event-frontend-service
            port:
              number: 3000
